--- a/lecturenotesclass13.Rmd
+++ b/lecturenotesclass13.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Simulation-based inference - confidence intervals"
-author: ""
+author: "Christine Wang"
 date: "March 3, 2021"
 output: html_document
 editor_options: 
@@ -106,6 +106,8 @@ as the "best guess", or estimate, for the population parameter.
 Suppose we were interested in the population mean. What would be natural
 point estimate to use?
 
+mean
+
 
 | Quantity           | Parameter  | Statistic   |
 |--------------------|------------|-------------|
@@ -117,7 +119,7 @@ point estimate to use?
 
 
 What is the downside to using point estimates?
-
+Point estimates might not hit the exact population parameter we're looking for.
 ## Confidence intervals
 
 A plausible range of values for the population parameter is an interval 
@@ -146,6 +148,8 @@ Suppose you randomly sample 50 students and 5 of them are left handed. If you
 were to take another random sample of 50 students, how many would you expect 
 to be left handed? Would you be surprised if only 3 of them were left handed? 
 Would you be surprised if 40 of them were left handed?
+
+I'd be more surprised if 40 of them were left handed because that'd be the majority, and that's not what we usually observe in reality.
 
 ## Quantifying the variability of a sample statistic
 
@@ -189,7 +193,7 @@ Consider 20 1-bedroom apartments that were randomly selected on
 Craigslist Manhattan from apartments listed as "by owner".
 
 ```{r data_manhattan}
-manhattan <- read_csv("~/manhattan.csv")
+manhattan <- read_csv("~/R/lecture-note-class-13-Cw34875/manhattan.csv")
 ```
 
 Consider 3-10 day survival of mice randomized to various
@@ -250,10 +254,10 @@ Create a 95% bootstrap confidence interval for the population *mean* price of
 
 First, identify the following:
 
-- Population: 
-- Parameter of interest:
-- Sample:
-- Sample size:
+- Population: 1 bedroom apartments in Manhattan
+- Parameter of interest: price
+- Sample: 1 bedroom apartments
+- Sample size: 20
 
 To create our confidence interval, we'll follow the four-step bootstrap
 scheme outlined in the slides using functions from `infer`.
@@ -329,6 +333,7 @@ get_ci(boot_means, level = 0.95)
 ```
 
 What does this mean?
+It tells us that we're XX confident that our interval contains our true value.
 
 **Interpretation**:
 
@@ -339,8 +344,14 @@ population *median* price of 1-bedroom apartments in Manhattan. Do this in a
 single code chunk with a single pipeline. Provide an interpretation of your result.
 
 ```{r practice_1}
-
+boot_median <- manhattan %>% 
+  specify(response = rent) %>% 
+  generate(reps = 10000, type = "bootstrap") %>% 
+  calculate(stat = "median") %>%
+  get_ci(level = 0.95)
+boot_median
 ```
+We are 95% sure that the true median is between 2162 and 2875.
 
 ### A confidence interval for the population proportion - $p$
 
@@ -348,10 +359,10 @@ Consider the mice radiation dataset. Suppose we want to compute a 95% confidence
 
 First, identify the following:
 
-- Population: 
-- Parameter of interest:
-- Sample:
-- Sample size:
+- Population: Mice not in treatment
+- Parameter of interest: proportion of mice that died
+- Sample: mice that died while not on treatment
+- Sample size: 261
 
 ```{r boot_mice}
 boot_prop <- mice %>% 
@@ -368,6 +379,7 @@ ci_mice_died
 ```
 
 What does this mean?
+We are 95% confident that the proportion of mice that died while not on treatment is between 0.690 and 0.793.
 
 **Interpretation**:
 
@@ -381,22 +393,29 @@ visualise(boot_prop) +
 Consider the mice radiation results. Suppose we want to compute a 90% confidence interval for the proportion of mice that lived while on the treatment, regardless of the dose.
 
 ```{r practice_2_bootstrap}
-
+boot_prop <- mice %>% 
+  filter(treat == 1) %>% 
+  mutate(died = if_else(died == 1, "yes", "no")) %>% 
+  specify(response = died, success = "yes") %>% 
+  generate(reps = 10000, type = "bootstrap") %>% 
+  calculate(stat = "prop")
 ```
 
 ```{r practice_2_ci}
-
+ci_mice_died <- get_ci(boot_prop, level = .90)
+ci_mice_died
 ```
 
 Visualizing our Resuts:
 
 ```{r practice_2_visualize}
-
+visualise(boot_prop) +
+  shade_ci(ci_mice_died)
 ```
 
 
 Give an interpretation of your result.
-
+We are 90% confident that the proportion of mice that died while on the trial is between 0.349 and 0.448. This is a lot smaller than the proportion of mice that died while not on treatment, meaning that the treatment was effective.
 
 # References
 
