--- a/lecturenotesclass13.Rmd
+++ b/lecturenotesclass13.Rmd
@@ -396,7 +396,7 @@ Consider the mice radiation results. Suppose we want to compute a 90% confidence
 boot_prop <- mice %>% 
   filter(treat == 1) %>% 
   mutate(died = if_else(died == 1, "yes", "no")) %>% 
-  specify(response = died, success = "yes") %>% 
+  specify(response = died, success = "no") %>% 
   generate(reps = 10000, type = "bootstrap") %>% 
   calculate(stat = "prop")
 ```
@@ -415,7 +415,7 @@ visualise(boot_prop) +
 
 
 Give an interpretation of your result.
-We are 90% confident that the proportion of mice that died while on the trial is between 0.349 and 0.448. This is a lot smaller than the proportion of mice that died while not on treatment, meaning that the treatment was effective.
+We are 90% confident that the proportion of mice that died while on the trial is between 0.552 and 0.651. This is a lot greater than the proportion of mice that died while not on treatment, meaning that the treatment was effective.
 
 # References
 
